# Anomaly-Detection-Demo

./: LICENSE  README.md  plots_matplotlib.py  plots_plotly.py  pyproject.toml  requirements.txt
time_series/: time_series_0.csv  time_series_1.csv  time_series_2.csv
