[project]
name = "anomaly-detection-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
